# 3lips

./: .env.example  .gitignore  .mailmap  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  IMPLEMENTATION_GAPS.md  PASSIVE_RADAR_ARCHITECTURE.md  README.md  RETINASolver_Implementation_Completion.md  STONE_SOUP_INTEGRATION.md  TESTING_STRATEGY.md  docker-compose-e2e-test.yml  docker-compose.dev.yml  docker-compose.yml  octo-review-workflow.vim  puppeteer_retina_solver_validation.js  puppeteer_test_results.md  pyproject.toml  repo2pdf.ignore  review-pr-alternative.sh  review-pr.sh  run_e2e_test.sh  run_retina_tests.sh  run_tests.sh  test_e2e_pipeline.py  test_puppeteer_enhanced.py  test_puppeteer_results.md  test_retina_simple.py  test_retina_solver.py  test_retina_solver_e2e_integration.py
.github/workflows/: claude.yml  test.yml
.pre-commit-hooks/: trivy-scan.sh
api/: api.py  requirements.txt
api/map/: DOCKER_DEVELOPMENT.md  TRACK_VISUALIZATION.md  index.html  main.js
api/map/event/: adsb.js  ellipsoid.js  radar.js  tracks.js
api/public/js/: index.js
api/templates/: index.html
cesium/: Dockerfile
common/: Message.py  __init__.py
event/: __init__.py  event.py  global_tracker_implementation_plan.md  requirements.txt
event/algorithm/: __init__.py
event/algorithm/associator/: AdsbAssociator.py  Associator.py  NodeDetectionsHelper.py  __init__.py
event/algorithm/geometry/: Geometry.py  __init__.py
event/algorithm/localisation/: EllipseParametric.py  EllipsoidParametric.py  RETINASolverLocalisation.py  SphericalIntersection.py  TelemetrySolverLocalisation.py  __init__.py
event/algorithm/models/: MeasurementModels.py  MotionModels.py  __init__.py
event/algorithm/track/: StoneSoupTracker.py  Track.py  Tracker.py  __init__.py
event/algorithm/truth/: AdsbTruth.py  __init__.py
event/data/: Ellipsoid.py  __init__.py
script/: plot_accuracy.py  plot_associate.py
test/: test_basic.py
test/event/: TestGeometry.py  TestNodeDetectionsHelper.py  __init__.py  test_association.py  test_geometry.py  test_node_detections_helper.py
test/fixtures/: simple_scenarios.py
test/integration/: test_full_pipeline.py
tests/: SMOKE_TEST.md  docker-compose.ci.yml  docker-compose.retina.yml  docker-compose.smoke.yml  docker-compose.test.yml  puppeteer-mcp-setup.md  retina-solver-test-suite.js  smoke-test.js  verify-retina-services.sh  verify-services.sh
tests/integration/: README.md
tests/integration/config/: test.config.js
tests/integration/tests/: e2e-retina-solver.test.js  mvp-config.test.js  mvp-map-ui.test.js  mvp-retina-solver.test.js  mvp-service-comm.test.js  retina-solver-pipeline.test.js
tests/integration/utils/: retina-solver-helpers.js
tests/mocks/: README.md  nginx.conf
tests/puppeteer/: README.md
tests/puppeteer/tests/: mvp-api.test.js
tests/unit/: test_basic.py
tests/unit/event/: __init__.py  test_adsb_integration.py  test_geometry.py  test_track_lifecycle.py
(+5 files in other folders)
